--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -9,8 +9,8 @@
                     <corners android:radius="10dp" />
                     <gradient
                         android:angle="90"
-                        android:endColor="#0057DD"
-                        android:startColor="#0030A1" />
+                        android:endColor="#03989d"
+                        android:startColor="#03989d" />
                 </shape>
             </item>
             <item android:state_enabled="false">
@@ -19,8 +19,8 @@
                     <corners android:radius="10dp" />
                     <gradient
                         android:angle="90"
-                        android:endColor="#0057DD"
-                        android:startColor="#0030A1" />
+                        android:endColor="#03989d"
+                        android:startColor="#03989d" />
                 </shape>
             </item>
         </selector>
